--- a/exam_questions/корнаизусть.md
+++ b/exam_questions/корнаизусть.md
@@ -473,7 +473,7 @@ BinaryOperator<Integer> binaryOperator = (x, y) -> x * y
 
 ![exceptions_hierarchy_1.png](../main/resources/exceptions_hierarchy_1.png)
 
-+ Interface Throwable - общий предок для всех исключений
++ класс Throwable - общий предок для всех исключений
 + Error - Связаны с проблемами уровня JVM 
 + Exception - Являются результатом проблем в программе
 
